update java learn.